5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1602_1016.log
== TEST (2019-03-21 14:06:31) 
-- CODE:
A = float(input("valor A: "))
B = float(input("valor B: "))
C = float(input("valor C: "))

s = (A + B + c)/2
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = (A + B + c)/2
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:07:18) 
-- CODE:
A = float(input("valor A: "))
B = float(input("valor B: "))
C = float(input("valor C: "))

s = (A + B + C)/2
print(s)
-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:14:53) 
-- CODE:
A = float(input("valor A: "))
B = float(input("valor B: "))
C = float(input("valor C: "))

s = (A + B + C)/2
from math import*
sqrt(s(s - A)*(s - B)*(s - C))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(s(s - A)*(s - B)*(s - C))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:51:55) 
-- CODE:
from <math> import * 
A = float(input("valor A: "))
B = float(input("valor B: "))
C = float(input("valor C: "))
S = (A+B+C)/2
from math import *
area = sqrt(S*(S - A)*(S-B)*(S-C))
print(round(area,5))
-- EXECUTION TIME:
0.271389
-- ERROR:
  File "/home/codebench/codes/1602/1016/main.py", line 1
    from <math> import * 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:52:03) 
-- CODE:
from <math> import * 
A = float(input("valor A: "))
B = float(input("valor B: "))
C = float(input("valor C: "))
S = (A+B+C)/2
from math import *
area = sqrt(S*(S - A)*(S-B)*(S-C))
print(round(area,5))
-- ERROR:
File "XXXX", line 1
    from <math> import * 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:52:28) 
-- CODE:
 
A = float(input("valor A: "))
B = float(input("valor B: "))
C = float(input("valor C: "))
S = (A+B+C)/2
from math import *
area = sqrt(S*(S - A)*(S-B)*(S-C))
print(round(area,5))
-- EXECUTION TIME:
0.127669
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
